# MMseqs-playground

./: .gitignore  CMakeLists.txt  README.md
data/: CMakeLists.txt
src/: CMakeLists.txt  LocalCommandDeclarations.h  mmseqs-playground.cpp
src/commons/: CMakeLists.txt  LocalParameters.h
src/playground/: CMakeLists.txt  genkmer.cpp  kmer2long.cpp  long2kmer.cpp  printprofile.cpp
src/version/: Version.cpp
